feat-INT-31a2: Gate interface separated from infos.php. It now accessible from Planet Overview

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,12 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a1
+Текущая версия V31a2
 --------------------
+
+[!] Межгалактические Врата: Интерфейс Врат  вынесен  на  отдельную  страницу  и
+    доступен с Обзора планеты (куда вынесен таймер готовности врат)
+    Все таймеры врат заменены на sn_timer
 
 [+] Обзор  планеты/Обзор  Империи:  Таймер  очереди  строительства  зданий  под
     иконкой планеты теперь переключается на  следующее  здание  в  очереди  при
