--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,9 +9,54 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a2
+Текущая версия V31a3
 --------------------
 
+[!] Наемники:  Произведено  разделение  наемников  на  "просто  наемников"   и
+    "губернаторов".   "Просто   наемники"   обладают   всеимперским    бонусом.
+    "Губернаторы" обладают локальным планетарным бонусом  и  должны  покупаться
+    индивидуально на каждую планету
+    Система губернаторов cбалансирована следующим образом:
+    1.  В  губернаторы  произведены  следующие  офицеры:   Геолог,   Энергетик,
+    Архитектор, Конструктор, Академик, Фортификатор
+    2. Вся ТМ за бывших офицеров возвернута игрокам
+    3. Балансировка губернаторов проведена из  расчета  на  "среднего  игрока",
+    имеющего 3 планеты. Такие игроки не получат  пенальти  при  оснащении  всех
+    планет  губернаторами.  Понятно,  что  общая   производительность   Империи
+    уменшитя, однако это те жертвы, на  которые  я  готов  пойти.  В  целом  же
+    изменение направлено на уменьшение среднего  количества  ТМ  у  игроков.  В
+    особенности - у топов и саб-топов
+    4. Стоимость наемников теперь рассчитывается по формуле:
+      БС * (Фактор ^ Уровень), где
+      БС - базовая стоимость наемника
+      Фактор - заранее заданная величина
+      ^ - операция возведения в степень
+      Уровень - новый уровень наемника
+    5. Оставшиеся офицеры-наемники перебалансированы с учетом изменений
+    Губернаторы изменены следующим образом:
+    1. Геолог. БС = 1, Фактор = 1.1. Базовый губернатор  и  -  самый  полезный.
+    Доступен игрокам практически с самого начал - БС составляет всего 1 ТМ.  Не
+    имеет ограничений по уровню - поэтому имеет такой высокий Фактор
+    2. Энергетик. БС = 1, Фактор = 1.025. Специфический губернатор,  нужный  на
+    планетах с очень низкой температурой.  Откровенно  говоря  -  слабополезен,
+    поэтому очень дешев. И поэтому же не имеет ограничений по уровню
+    3. Архитектор. БС = 0.6, Фактор = 1.2. Чрезвычайно  полезен  для  застройки
+    новой колонии. Незаменим для начинающих игроков.  После  отстройки  колоний
+    скорее всего будет заменен на другого офицера - в зависимости от назначения
+    планеты. Весьма доступен из-за низкой БС,  однако  не  дает  топам  особого
+    преимущества  из-за  высокого  Фактора.  Ограничен  15-м  уровнем
+    4. Конструктор. БС = 0.2, Фактор = 1.3. Позволяет начинающим игрокам  после
+    отстройки колоний быстрее  производить  стартовый  флот.  Что  бы  избежать
+    злоупотреблений наемника топами имеет очень высокий Фактор. Ограничен  15-м
+    уровнем
+    5. Академик. БС = 0.2, Фактор = 1.3. Аналогично Конструктору  имеет  низкую
+    стартовую цену что бы помочь начинающему игроку  исследовать  технологии  и
+    очень высокий Фактор, что бы воспрепятствовать  топам  использовать  низкую
+    цену. Ограничен 15-м уровнем
+    6. Фортификатор. БС = 2, Фактор =  1.  Офицер  для  "поплавков".  Т.е.  для
+    топов, имеющих возможность делать "поплавки". Характеристики  -  временные.
+    Планирутся добавление бонуса к боевым характеристикам  защитных  сооружений
+    и, возможно, планетарного флота. Ограничен 8-м уровнем
 [!] Межгалактические Врата: Интерфейс Врат  вынесен  на  отдельную  страницу  и
     доступен с Обзора планеты (куда вынесен таймер готовности врат)
     Все таймеры врат заменены на sn_timer
