doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -78,6 +78,9 @@
 [@] SYS: В описании структуры кораблей (vars.php) данные о двигателях  вынесены
     в  отдельный  массив  'engine'.  Теперь  можно   указывать   неограниченное
     количество двигателей для апгрейда корабля
+[@] Апдейтер: Доработан апдейтер, что бы предотвратить зацикливание
+[@] Админка: В "Утилиты" добавлена  возможность  форсировать  только  последний
+    апдейт
 
 30d4
 ----
