feat-NWS-31a5: Added latest news to planet overview. News now rendered everywhere with single engine

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a4
+Текущая версия V31a5
 --------------------
 
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
@@ -63,6 +63,8 @@
     губернатора и его уровень
 [+] Инфо/Флот: Показываются текущие характеристики корабля (с учетом  наемников
     и технологий) 
+[+] Новости: Добавлена лента новостей на  страницу  обзора  планеты.  Выводятся
+    только 3 последние свежие новости
 
 [~] Луна: Имя создаваемой луны теперь не такое длинное
 
@@ -81,6 +83,12 @@
 [@] Апдейтер: Доработан апдейтер, что бы предотвратить зацикливание
 [@] Админка: В "Утилиты" добавлена  возможность  форсировать  только  последний
     апдейт
+[@] Новости:  На  странице  новостей,  странице  Императора  и  обзоре  планеты
+    рендерятся одной процедурой и используют один  темплейт.  Индикатор  свежих
+    новостей теперь  ориентируется  на  дату  просмотра,  а  не  на  количество
+    новостей
+[@] ТМ: Исправлена лишняя ошибка в логах, если количество изменяемой ТМ равно 0
+    (например, при бесплатном рынке или офицерах)
 
 30d4
 ----
