misc-INT: Added tooltip to governor icon on planet list

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -67,6 +67,7 @@
     только 3 последние свежие новости
 
 [~] Луна: Имя создаваемой луны теперь не такое длинное
+[~] Список планет: Добавлена всплывающая подсказка на иконку губернатора
 
 [%] Флоты: Добавлен патч для mysql-серверов со  включенным  STRICT_TRANS_TABLES
     при отправке флотов
