fix-RPG-31a5.1: Fixed error hiring governors leading to negative DM

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a5
---------------------
+Текущая версия V31a5.1
+----------------------
 
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
@@ -65,9 +65,12 @@
     и технологий) 
 [+] Новости: Добавлена лента новостей на  страницу  обзора  планеты.  Выводятся
     только 3 последние свежие новости
+[~] ТМ: Изменения в ТМ текущего игрока отображаются сразу по факту
 
 [~] Луна: Имя создаваемой луны теперь не такое длинное
 [~] Список планет: Добавлена всплывающая подсказка на иконку губернатора
+[%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
+    привести к отрицательному количеству ТМ у игрока
 
 [%] Флоты: Добавлен патч для mysql-серверов со  включенным  STRICT_TRANS_TABLES
     при отправке флотов
@@ -90,6 +93,7 @@
     новостей
 [@] ТМ: Исправлена лишняя ошибка в логах, если количество изменяемой ТМ равно 0
     (например, при бесплатном рынке или офицерах)
+[@] ТМ: Изменение ТМ в переменной $user производится в теле rpg_points_change
 
 30d4
 ----
