--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a5.1
-----------------------
+Текущая версия V31a6
+--------------------
 
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
@@ -48,7 +48,8 @@
     15-м - 63 ТМ
     10. Губернатор "Фортификатор" так же играет для планеты роль Защитника БС =
     2, Фактор = 1, стоимость максимального 8-го уровня - 16 ТМ. С  3-го  уровня
-    позволяет  строить  Планетарную  защиту 
+    позволяет строить Планетарную защиту. Дает бонус  10%  к  атаке,  защите  и
+    щитам хозяину планеты при обороне
     11. Вследствие полной бессмысленности найма Технолога на лунах во избежание
     напрасных трат ТМ игроками он убран со страницы управления луной
 [!] Межгалактические Врата: Интерфейс Врат  вынесен  на  отдельную  страницу  и
