misc-MRC: Changed a bit description of Fortifier

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -48,8 +48,8 @@
     15-м - 63 ТМ
     10. Губернатор "Фортификатор" так же играет для планеты роль Защитника БС =
     2, Фактор = 1, стоимость максимального 8-го уровня - 16 ТМ. С  3-го  уровня
-    позволяет строить Планетарную защиту. Дает бонус  10%  к  атаке,  защите  и
-    щитам хозяину планеты при обороне
+    позволяет строить Планетарную защиту. Дает хозяину  планеты  бонус  10%  за
+    каждый уровень к атаке, броне и щитам при обороне
     11. Вследствие полной бессмысленности найма Технолога на лунах во избежание
     напрасных трат ТМ игроками он убран со страницы управления луной
 [!] Межгалактические Врата: Интерфейс Врат  вынесен  на  отдельную  страницу  и
