feat-MRC-31a6.1: Implemented protection from accidential buying of different governor and accidential buying unneeded governor with page refresh

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,8 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a6
---------------------
+Текущая версия V31a6.1
+----------------------
 
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
@@ -52,6 +52,9 @@
     каждый уровень к атаке, броне и щитам при обороне
     11. Вследствие полной бессмысленности найма Технолога на лунах во избежание
     напрасных трат ТМ игроками он убран со страницы управления луной
+    12.  Страница  покупки  губернаторов  требует  подтверждение  операции  при
+    покупке губернатора, отличного от текущего. Страница покупки имеет защту от
+    случайной покупки губернатора при обновлении страницы
 [!] Межгалактические Врата: Интерфейс Врат  вынесен  на  отдельную  страницу  и
     доступен с Обзора планеты (куда вынесен таймер готовности врат)
     Все таймеры врат заменены на sn_timer
