--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,9 +9,10 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a6.1
-----------------------
+Текущая версия V31a7
+--------------------
 
+[!] Локализация: Язык и кодировка теперь зависят от загруженного языка
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
