--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -14,6 +14,32 @@
 
 [!] Локализация: СверхНовая использует  кодировку  UTF-8  при  работе  с  БД  и
     рендере HTML-страниц. Таким образом поддерживаются любые наборы символов
+[!] Локализация:  В  админке  добавлен  редактор  локализаций  -  пункт   меню
+    "Локализация" в разделе "Утилиты". Логика работы редактора следующая:
+    1. Выбор пункта  меню  "Локализация"  открывает  выбор  т.н.  "домена"  для
+    редактирования. Домен - это совокупность строк локализации,  относящихся  к
+    отдельному   аспекту   игры.   Домен   эквивалентен   языковому   файлу   с
+    соответствующим именем
+    2.  После  выбора  домена  и  подтверждения  выбора  открывается   страница
+    редактирования строк локализации. Открытие больших  файлов  может  занимать
+    существенное время - поэтому запаситесь терпением
+    3. После редактирования строк локализации и подтверждения редактор  создаст
+    файлы "<имя домена>.mo.new" в каждой папке языка
+    4. Файлы .mo.new имеют приоритет перед обычными  .mo  файлами  локализации.
+    Т.е. если в одном языковом каталоге присутствуют оба типа файлов,  редактор
+    загрузит для редактирования .mo.new
+    5. Для того, что бы движок  подгрузил  новый  файл  локализации,  требуется
+    изменить его расширение с .mo.new  на  .mo.  Обычно  это  перезапишет  файл
+    текущий файл локализации - поэтому следует заранее  сделать  его  резервную
+    копию
+    6. ВНИМАНИЕ! Следует соблюдать осторожность при  замене  старых  файлов  на
+    новые! Редактор разрешает идентификаторы констант в их  реальное  значение,
+    не  сохраняет  комментарии  и  игнорирует  дополнительный  код   в   файлах
+    локализации - включая подстановку значений в infos.mo! В результате простая
+    перезапись файлов может нарушить нормальную работу  подсистемы  локализации
+    движка!   Для   отдельных   файлов   может   потребоваться   дополнительное
+    редактирование "ручками" и добавление  исполнимого  кода  из  оригинального
+    файла!
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
