doc: readme editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -40,6 +40,11 @@
     движка!   Для   отдельных   файлов   может   потребоваться   дополнительное
     редактирование "ручками" и добавление  исполнимого  кода  из  оригинального
     файла!
+    7. Следующие домены используют дополнительный  PHP-код  и  требуют  ручного
+    вмешательства при редактировании: fleet, infos,  login,  market,  messages,
+    options, system
+    8.  Следующие  домены   используют   константы   alliance,   tech,   quest.
+    Рекомендуется ручное редактирование этих файлов, однако оно не требуется
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
