feat-LNG-31a10: Added headers to language files

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,13 +9,13 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a8
---------------------
+Текущая версия V31a10
+---------------------
 
 [!] Локализация: СверхНовая использует  кодировку  UTF-8  при  работе  с  БД  и
     рендере HTML-страниц. Таким образом поддерживаются любые наборы символов
-[!] Локализация:  В  админке  добавлен  редактор  локализаций  -  пункт   меню
-    "Локализация" в разделе "Утилиты". Логика работы редактора следующая:
+[!] Редактор локализаций: В админке добавлен редактор локализаций - пункт  меню
+    "Локализация" в разделе "Утилиты"
     1. Выбор пункта  меню  "Локализация"  открывает  выбор  т.н.  "домена"  для
     редактирования. Домен - это совокупность строк локализации,  относящихся  к
     отдельному   аспекту   игры.   Домен   эквивалентен   языковому   файлу   с
@@ -40,11 +40,11 @@
     движка!   Для   отдельных   файлов   может   потребоваться   дополнительное
     редактирование "ручками" и добавление  исполнимого  кода  из  оригинального
     файла!
-    7. Следующие домены используют дополнительный  PHP-код  и  требуют  ручного
-    вмешательства при редактировании: fleet, infos,  login,  market,  messages,
-    options, system
-    8.  Следующие  домены   используют   константы   alliance,   tech,   quest.
-    Рекомендуется ручное редактирование этих файлов, однако оно не требуется
+    7. Редактор  локализаций  корректно работает с константами внутри доменов
+    8. Следующие домены используют дополнительный  PHP-код  и  требуют  ручного
+    вмешательства после редактировании: "options", "system"
+    9. Все файлы локализации пропущены через редактор и приведены к одному виду
+    10. Добавлены заголовки в файлы локализации
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
@@ -102,13 +102,13 @@
     и технологий) 
 [+] Новости: Добавлена лента новостей на  страницу  обзора  планеты.  Выводятся
     только 3 последние свежие новости
-[~] ТМ: Изменения в ТМ текущего игрока отображаются сразу по факту
 
+[~] ТМ: Изменения в ТМ текущего игрока отображаются сразу по факту
 [~] Луна: Имя создаваемой луны теперь не такое длинное
 [~] Список планет: Добавлена всплывающая подсказка на иконку губернатора
+
 [%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
     привести к отрицательному количеству ТМ у игрока
-
 [%] Флоты: Добавлен патч для mysql-серверов со  включенным  STRICT_TRANS_TABLES
     при отправке флотов
 
