doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -33,18 +33,14 @@
     текущий файл локализации - поэтому следует заранее  сделать  его  резервную
     копию
     6. ВНИМАНИЕ! Следует соблюдать осторожность при  замене  старых  файлов  на
-    новые! Редактор разрешает идентификаторы констант в их  реальное  значение,
-    не  сохраняет  комментарии  и  игнорирует  дополнительный  код   в   файлах
-    локализации - включая подстановку значений в infos.mo! В результате простая
-    перезапись файлов может нарушить нормальную работу  подсистемы  локализации
-    движка!   Для   отдельных   файлов   может   потребоваться   дополнительное
-    редактирование "ручками" и добавление  исполнимого  кода  из  оригинального
-    файла!
+    новые! Редактор не сохраняет комментарии и игнорирует дополнительный код  в
+    файлах локализации - включая подстановку значений в system.mo! В результате
+    простая перезапись  файлов  может  нарушить  нормальную  работу  подсистемы
+    локализации движка!  Следующие  файлы  содержат  дополнительный  PHP-код  и
+    требуют ручного вмешательства после работы в редакторе: "options", "system"
     7. Редактор  локализаций  корректно работает с константами внутри доменов
-    8. Следующие домены используют дополнительный  PHP-код  и  требуют  ручного
-    вмешательства после редактировании: "options", "system"
-    9. Все файлы локализации пропущены через редактор и приведены к одному виду
-    10. Добавлены заголовки в файлы локализации
+    8. Все файлы локализации пропущены через редактор и приведены к одному виду
+    9. Добавлены заголовки в файлы локализации
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
