doc: changelog editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,6 @@
 Текущая версия V31a10
 ---------------------
 
-[!] Локализация: СверхНовая использует  кодировку  UTF-8  при  работе  с  БД  и
-    рендере HTML-страниц. Таким образом поддерживаются любые наборы символов
 [!] Редактор локализаций: В админке добавлен редактор локализаций - пункт  меню
     "Локализация" в разделе "Утилиты"
     1. Выбор пункта  меню  "Локализация"  открывает  выбор  т.н.  "домена"  для
@@ -38,9 +36,12 @@
     простая перезапись  файлов  может  нарушить  нормальную  работу  подсистемы
     локализации движка!  Следующие  файлы  содержат  дополнительный  PHP-код  и
     требуют ручного вмешательства после работы в редакторе: "options", "system"
-    7. Редактор  локализаций  корректно работает с константами внутри доменов
-    8. Все файлы локализации пропущены через редактор и приведены к одному виду
-    9. Добавлены заголовки в файлы локализации
+    7. Редактор локализаций корректно работает с константами внутри доменов
+    8. В редакторе есть возможность добавлять и удалять строки локализации
+[!] Локализация: СверхНовая использует  кодировку  UTF-8  при  работе  с  БД  и
+    рендере HTML-страниц. Таким образом поддерживаются любые наборы символов
+    Все файлы локализации пропущены через редактор и приведены к одному виду
+    Добавлены заголовки в файлы локализации
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
