--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a10
+Текущая версия V31a11
 ---------------------
 
 [!] Редактор локализаций: В админке добавлен редактор локализаций - пункт  меню
@@ -42,6 +42,8 @@
     рендере HTML-страниц. Таким образом поддерживаются любые наборы символов
     Все файлы локализации пропущены через редактор и приведены к одному виду
     Добавлены заголовки в файлы локализации
+[!] Экономика: ТМ смасштабирована в отношении 1 к 1000. Т.е. весь приход  ТМ  и
+    все цены в ТМ увеличены в 1000 раз
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
@@ -54,7 +56,7 @@
       Фактор - заранее заданная величина
       ^ - операция возведения в степень
       Уровень - новый уровень наемника
-    2. По умолчанию БС = 3, Фактор = 1
+    2. По умолчанию БС = 3000, Фактор = 1
     3. Максимальный уровень карго-мастера увеличен до 20
     4. Упразднены  наемники  Геолог,   Энергетик,   Архиктектор,   Конструктор,
     Фортификатор, Разрушитель - их функции переданы губернаторам (см. ниже) 
@@ -70,16 +72,16 @@
     уменшится, однако это те жертвы, на которые  я  готов  пойти.  В  целом  же
     изменение направлено на уменьшение среднего  количества  ТМ  у  игроков.  В
     особенности - у топов и саб-топов
-    8. Новый губернатор "Технолог" объединяет функции Геолога и  Энергетика
-    БС = 1, Фактор = 1.06, стоимость 20 уровня - 31 ТМ, не имеет ограничения по
-    уровню. С 5-го уровня позволяет строить  термоядерную  электростанцию
+    8. Новый губернатор "Технолог" объединяет функции Геолога и Энергетика БС =
+    800, Фактор = 1.06, стоимость 20 уровня - 29418 ТМ, не имеет ограничения по
+    уровню. С 5-го уровня позволяет строить термоядерную электростанцию
     9. Новый губернатор "Инженер" объединяет функции Архитектора и Конструктора
-    БС = 0.5, Фактор = 1.25, стоимость на 10-м уровне - 10 ТМ, на  макисмальном
-    15-м - 63 ТМ
+    БС = 400, Фактор = 1.25, стоимость 10-го уровне - 13298  ТМ,  максимального
+    15-го - 43868 ТМ
     10. Губернатор "Фортификатор" так же играет для планеты роль Защитника БС =
-    2, Фактор = 1, стоимость максимального 8-го уровня - 16 ТМ. С  3-го  уровня
-    позволяет строить Планетарную защиту. Дает хозяину  планеты  бонус  10%  за
-    каждый уровень к атаке, броне и щитам при обороне
+    2000, Фактор = 1, стоимость максимального 8-го уровня - 16000  ТМ.  С  3-го
+    уровня позволяет строить Планетарную защиту. Дает хозяину планеты бонус 10%
+    за каждый уровень к атаке, броне и щитам при обороне
     11. Вследствие полной бессмысленности найма Технолога на лунах во избежание
     напрасных трат ТМ игроками он убран со страницы управления луной
     12.  Страница  покупки  губернаторов  требует  подтверждение  операции  при
@@ -99,10 +101,13 @@
     и технологий) 
 [+] Новости: Добавлена лента новостей на  страницу  обзора  планеты.  Выводятся
     только 3 последние свежие новости
+[+] Вселенная: В попап Альянсов добавлен его ранг
 
 [~] ТМ: Изменения в ТМ текущего игрока отображаются сразу по факту
 [~] Луна: Имя создаваемой луны теперь не такое длинное
 [~] Список планет: Добавлена всплывающая подсказка на иконку губернатора
+[~] Поиск: Оптимизированы запросы поиска
+    При поиске Альянса поиск подстроки происходит одновременно в имени и тэге
 
 [%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
     привести к отрицательному количеству ТМ у игрока
@@ -128,6 +133,10 @@
 [@] ТМ: Исправлена лишняя ошибка в логах, если количество изменяемой ТМ равно 0
     (например, при бесплатном рынке или офицерах)
 [@] ТМ: Изменение ТМ в переменной $user производится в теле rpg_points_change
+[@] БД: В таблице `users` убраны неиспользуемые поля. Изменены типы  нескольких
+    полей на более логичные. Добавлено поле `ally_tag`
+    В таблицы `users` и `alliance` добавлены поля с текущими значениями ранга и
+    очков статистики
 
 30d4
 ----
