feat-ART-31a12: Artifacts. LHC

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,41 +9,21 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия V31a11
+Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
+===============================================================================
+
+Текущая версия 31a12
 ---------------------
 
-[!] Редактор локализаций: В админке добавлен редактор локализаций - пункт  меню
-    "Локализация" в разделе "Утилиты"
-    1. Выбор пункта  меню  "Локализация"  открывает  выбор  т.н.  "домена"  для
-    редактирования. Домен - это совокупность строк локализации,  относящихся  к
-    отдельному   аспекту   игры.   Домен   эквивалентен   языковому   файлу   с
-    соответствующим именем
-    2.  После  выбора  домена  и  подтверждения  выбора  открывается   страница
-    редактирования строк локализации. Открытие больших  файлов  может  занимать
-    существенное время - поэтому запаситесь терпением
-    3. После редактирования строк локализации и подтверждения редактор  создаст
-    файлы "<имя домена>.mo.new" в каждой папке языка
-    4. Файлы .mo.new имеют приоритет перед обычными  .mo  файлами  локализации.
-    Т.е. если в одном языковом каталоге присутствуют оба типа файлов,  редактор
-    загрузит для редактирования .mo.new
-    5. Для того, что бы движок  подгрузил  новый  файл  локализации,  требуется
-    изменить его расширение с .mo.new  на  .mo.  Обычно  это  перезапишет  файл
-    текущий файл локализации - поэтому следует заранее  сделать  его  резервную
-    копию
-    6. ВНИМАНИЕ! Следует соблюдать осторожность при  замене  старых  файлов  на
-    новые! Редактор не сохраняет комментарии и игнорирует дополнительный код  в
-    файлах локализации - включая подстановку значений в system.mo! В результате
-    простая перезапись  файлов  может  нарушить  нормальную  работу  подсистемы
-    локализации движка!  Следующие  файлы  содержат  дополнительный  PHP-код  и
-    требуют ручного вмешательства после работы в редакторе: "options", "system"
-    7. Редактор локализаций корректно работает с константами внутри доменов
-    8. В редакторе есть возможность добавлять и удалять строки локализации
-[!] Локализация: СверхНовая использует  кодировку  UTF-8  при  работе  с  БД  и
-    рендере HTML-страниц. Таким образом поддерживаются любые наборы символов
-    Все файлы локализации пропущены через редактор и приведены к одному виду
-    Добавлены заголовки в файлы локализации
-[!] Экономика: ТМ смасштабирована в отношении 1 к 1000. Т.е. весь приход  ТМ  и
-    все цены в ТМ увеличены в 1000 раз
+[!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
+    свойствами. Артефакты можно купить за ТМ. Артефакты являются одноразовыми -
+    после  использования  Артефакт  исчезает.  Некоторые  Артефакты   настолько
+    мощные,  что  их  количество  в  одной  Империи  ограничено.  Использование
+    некоторых  Артефактов  привязано  к  планетам  -  т.е.  их   эффект   будет
+    распространятся  только  на  эту   планету.   Эффекты   других   Артефактов
+    распространяются на всю Империю. Особо  мощные  Артефакты  могут  оказывать
+    влияние на солнечную систему, галактику или даже Вселенную
+    Новый Артефакт - "Большой Адронный Колайдер"
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
@@ -87,9 +67,41 @@
     12.  Страница  покупки  губернаторов  требует  подтверждение  операции  при
     покупке губернатора, отличного от текущего. Страница покупки имеет защту от
     случайной покупки губернатора при обновлении страницы
+[!] Локализация: СверхНовая использует  кодировку  UTF-8  при  работе  с  БД  и
+    рендере HTML-страниц. Таким образом поддерживаются любые наборы символов
+    Все файлы локализации пропущены через редактор и приведены к одному виду
+    Добавлены заголовки в файлы локализации
+[!] Редактор локализаций: В админке добавлен редактор локализаций - пункт  меню
+    "Локализация" в разделе "Утилиты"
+    1. Выбор пункта  меню  "Локализация"  открывает  выбор  т.н.  "домена"  для
+    редактирования. Домен - это совокупность строк локализации,  относящихся  к
+    отдельному   аспекту   игры.   Домен   эквивалентен   языковому   файлу   с
+    соответствующим именем
+    2.  После  выбора  домена  и  подтверждения  выбора  открывается   страница
+    редактирования строк локализации. Открытие больших  файлов  может  занимать
+    существенное время - поэтому запаситесь терпением
+    3. После редактирования строк локализации и подтверждения редактор  создаст
+    файлы "<имя домена>.mo.new" в каждой папке языка
+    4. Файлы .mo.new имеют приоритет перед обычными  .mo  файлами  локализации.
+    Т.е. если в одном языковом каталоге присутствуют оба типа файлов,  редактор
+    загрузит для редактирования .mo.new
+    5. Для того, что бы движок  подгрузил  новый  файл  локализации,  требуется
+    изменить его расширение с .mo.new  на  .mo.  Обычно  это  перезапишет  файл
+    текущий файл локализации - поэтому следует заранее  сделать  его  резервную
+    копию
+    6. ВНИМАНИЕ! Следует соблюдать осторожность при  замене  старых  файлов  на
+    новые! Редактор не сохраняет комментарии и игнорирует дополнительный код  в
+    файлах локализации - включая подстановку значений в system.mo! В результате
+    простая перезапись  файлов  может  нарушить  нормальную  работу  подсистемы
+    локализации движка!  Следующие  файлы  содержат  дополнительный  PHP-код  и
+    требуют ручного вмешательства после работы в редакторе: "options", "system"
+    7. Редактор локализаций корректно работает с константами внутри доменов
+    8. В редакторе есть возможность добавлять и удалять строки локализации
 [!] Межгалактические Врата: Интерфейс Врат  вынесен  на  отдельную  страницу  и
     доступен с Обзора планеты (куда вынесен таймер готовности врат)
     Все таймеры врат заменены на sn_timer
+[!] Экономика: ТМ смасштабирована в отношении 1 к 1000. Т.е. весь приход  ТМ  и
+    все цены в ТМ увеличены в 1000 раз
 
 [+] Обзор  планеты/Обзор  Империи:  Таймер  очереди  строительства  зданий  под
     иконкой планеты теперь переключается на  следующее  здание  в  очереди  при
@@ -108,6 +120,9 @@
 [~] Список планет: Добавлена всплывающая подсказка на иконку губернатора
 [~] Поиск: Оптимизированы запросы поиска
     При поиске Альянса поиск подстроки происходит одновременно в имени и тэге
+[~] Статистика: Изменен  расчет  статистики.  Теперь  в  тратах  каждый  ресурс
+    считается согласно курсу обмена.  Таким  образом  игроки  с  более  ценными
+    ресурсами получат больше очков
 
 [%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
     привести к отрицательному количеству ТМ у игрока
