misc-NWS: In Planet Overview now shows only ureaded news but not more then per server value - 3 by default

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -112,7 +112,8 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 [+] Инфо/Флот: Показываются текущие характеристики корабля (с учетом  наемников
     и технологий) 
 [+] Новости: Добавлена лента новостей на  страницу  обзора  планеты.  Выводятся
-    только 3 последние свежие новости
+    только  последние  непрочитанные  новости.  Количество  выводимых  новостей
+    настраивается на сервере (по умолчанию - 3)
 [+] Вселенная: В попап Альянсов добавлен его ранг
 
 [~] ТМ: Изменения в ТМ текущего игрока отображаются сразу по факту
