--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -129,6 +129,8 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     привести к отрицательному количеству ТМ у игрока
 [%] Флоты: Добавлен патч для mysql-серверов со  включенным  STRICT_TRANS_TABLES
     при отправке флотов
+[%] Локализация:  Добавлен  патч  для  серверов  с   неправильно   настроенной
+    кодировкой в HTTP-заголовке
 
 [@] SYS: Устаревшие функции заменены актуальными аналогами:
       int_buildCounter => tpl_parse_planet
