feat-ART-31a13: New Artifact - Rapid Colony Deployer

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,8 +12,8 @@
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
 
-Текущая версия 31a12
----------------------
+Текущая версия 31a13
+--------------------
 
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
     свойствами. Артефакты можно купить за ТМ. Артефакты являются одноразовыми -
@@ -23,7 +23,8 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     распространятся  только  на  эту   планету.   Эффекты   других   Артефактов
     распространяются на всю Империю. Особо  мощные  Артефакты  могут  оказывать
     влияние на солнечную систему, галактику или даже Вселенную
-    Новый Артефакт - "Большой Адронный Колайдер"
+    Добавлен Артефакт - "Большой Адронный Колайдер"
+    Добавлены Артефакты - Автономный  Колонизирующий  Комплекс  трех уровней
 [!] Наемники: Произведено разделение офицеров на "наемников" и  "губернаторов".
     Наемники покупаются через общее меню слева и их бонусы распространяются  на
     всю Империю. Губернаторы покупаются отдельно на каждую планету на  странице
