--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -125,6 +125,8 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 [~] Статистика: Изменен  расчет  статистики.  Теперь  в  тратах  каждый  ресурс
     считается согласно курсу обмена.  Таким  образом  игроки  с  более  ценными
     ресурсами получат больше очков
+[~] Вселенная: При обнаружении  планеты  с  отсутствующим  пользователем  в  БД
+    планета удаляется с отсрочкой 24 часа
 
 [%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
     привести к отрицательному количеству ТМ у игрока
