fix-RPG: Fixed bug with reduced bonus to referrals. Also added variable wich controls minimum amount of DM to start adding bonuses to referral

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -127,6 +127,9 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     ресурсами получат больше очков
 [~] Вселенная: При обнаружении  планеты  с  отсутствующим  пользователем  в  БД
     планета удаляется с отсрочкой 24 часа
+[~] Партнерка: Добавлено  ограничение  по  минимальному  количеству  ТМ,  после
+    которого   начинается   начисление   бонусов   реферралу    -    переменная
+    "rpg_bonus_minimum" в таблице "config"
 
 [%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
     привести к отрицательному количеству ТМ у игрока
