misc-FLT-31a14: Optimizing spy report generation

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
 
-Текущая версия 31a13
+Текущая версия 31a14
 --------------------
 
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
@@ -130,6 +130,7 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 [~] Партнерка: Добавлено  ограничение  по  минимальному  количеству  ТМ,  после
     которого   начинается   начисление   бонусов   реферралу    -    переменная
     "rpg_bonus_minimum" в таблице "config"
+[~] Шпионаж: Оптимизирована процедура генерации шпионского рапорта
 
 [%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
     привести к отрицательному количеству ТМ у игрока
@@ -137,6 +138,7 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     при отправке флотов
 [%] Локализация:  Добавлен  патч  для  серверов  с   неправильно   настроенной
     кодировкой в HTTP-заголовке
+[%] Шпионаж: Корректно выставляется время шпионского рапорта
 
 [@] SYS: Устаревшие функции заменены актуальными аналогами:
       int_buildCounter => tpl_parse_planet
