feat-ECO-31a15: Added server option to scale storages according to production speed. Disabled by default

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
 
-Текущая версия 31a14
+Текущая версия 31a15
 --------------------
 
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
@@ -116,6 +116,9 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     только  последние  непрочитанные  новости.  Количество  выводимых  новостей
     настраивается на сервере (по умолчанию - 3)
 [+] Вселенная: В попап Альянсов добавлен его ранг
+[+] Экономика: Новая  настройка  сервера  "Масштабировать  склады  от  скорости
+    добычи". Настройка доступна в общих настройках сервера  в  разделе  "Прочие
+    параметры". По умолчанию возможность отключена
 
 [~] ТМ: Изменения в ТМ текущего игрока отображаются сразу по факту
 [~] Луна: Имя создаваемой луны теперь не такое длинное
@@ -164,6 +167,8 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     полей на более логичные. Добавлено поле `ally_tag`
     В таблицы `users` и `alliance` добавлены поля с текущими значениями ранга и
     очков статистики
+[@] Админка/Настройки:  Состояние  все  чекбоксов  (включен/выключен)   теперь
+    определются в темлейте
 
 30d4
 ----
