feat-RPG-31a16: Dark Matter for Research

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
 
-Текущая версия 31a15
+Текущая версия 31a16
 --------------------
 
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
@@ -103,6 +103,10 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     Все таймеры врат заменены на sn_timer
 [!] Экономика: ТМ смасштабирована в отношении 1 к 1000. Т.е. весь приход  ТМ  и
     все цены в ТМ увеличены в 1000 раз
+[!] Темная Материя: За исследования начисляются опыт,  за  опыт  -  уровни,  за
+    уровни - ТМ. Таблица необходимого опыта  для  набора  уровней  эквивалентна
+    таблице опыта  за  постройки  (см.  /docs/readme.txt).  За  каждый  уровень
+    начисляется 1000 ТМ
 
 [+] Обзор  планеты/Обзор  Империи:  Таймер  очереди  строительства  зданий  под
     иконкой планеты теперь переключается на  следующее  здание  в  очереди  при
