misc-UNI-31a17: Adjusted phalanx algorythm

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
 
-Текущая версия 31a16
+Текущая версия 31a17
 --------------------
 
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
@@ -138,6 +138,11 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     которого   начинается   начисление   бонусов   реферралу    -    переменная
     "rpg_bonus_minimum" в таблице "config"
 [~] Шпионаж: Оптимизирована процедура генерации шпионского рапорта
+[~] Фаланга:  Исправлен  и  переработан  алгоритм  работы  фаланги.  Добавлено
+    исключение при полете флота с луны:
+      Особый случай: флот летит с луны A --> B
+       a) флот виден только на B, но не на луне A
+       b) после отзыва флот нигде не виден
 
 [%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
     привести к отрицательному количеству ТМ у игрока
