misc-LNG+DOC: Misc editing

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -142,10 +142,8 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     исключение при полете флота с луны:
       Особый случай: флот летит с луны A --> B
        a) флот виден только на B, но не на луне A
-       b) после отзыва флот нигде не виден
+       b) возвращающийся на луну флот не виден нигде
 
-[%] ТМ: Исправлена ошибка вычета  ТМ  при  найме  губернаторов,  которая  могла
-    привести к отрицательному количеству ТМ у игрока
 [%] Флоты: Добавлен патч для mysql-серверов со  включенным  STRICT_TRANS_TABLES
     при отправке флотов
 [%] Локализация:  Добавлен  патч  для  серверов  с   неправильно   настроенной
