misc-FLT: Adjusted phalanx algorythm

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -92,10 +92,10 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     копию
     6. ВНИМАНИЕ! Следует соблюдать осторожность при  замене  старых  файлов  на
     новые! Редактор не сохраняет комментарии и игнорирует дополнительный код  в
-    файлах локализации - включая подстановку значений в system.mo! В результате
-    простая перезапись  файлов  может  нарушить  нормальную  работу  подсистемы
-    локализации движка!  Следующие  файлы  содержат  дополнительный  PHP-код  и
-    требуют ручного вмешательства после работы в редакторе: "options", "system"
+    файлах локализации! В результате простая перезапись файлов  может  нарушить
+    нормальную  работу  подсистемы  локализации   движка!   Если   ваши   файлы
+    локализации  содержат  дополнительный  PHP-код,  то  они  требуют   ручного
+    вмешательства после обработке в редакторе!
     7. Редактор локализаций корректно работает с константами внутри доменов
     8. В редакторе есть возможность добавлять и удалять строки локализации
 [!] Межгалактические Врата: Интерфейс Врат  вынесен  на  отдельную  страницу  и
@@ -139,10 +139,9 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     "rpg_bonus_minimum" в таблице "config"
 [~] Шпионаж: Оптимизирована процедура генерации шпионского рапорта
 [~] Фаланга:  Исправлен  и  переработан  алгоритм  работы  фаланги.  Добавлено
-    исключение при полете флота с луны:
-      Особый случай: флот летит с луны A --> B
-       a) флот виден только на B, но не на луне A
-       b) возвращающийся на луну флот не виден нигде
+    два исключения:
+      1. Флот, летящий с луны, фалангой не виден
+      2. Флот, летящий на задание "Удержание" фалангой не виден
 
 [%] Флоты: Добавлен патч для mysql-серверов со  включенным  STRICT_TRANS_TABLES
     при отправке флотов
