misc-SYS-31a18: Code reorganization and optimization

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
 
-Текущая версия 31a17
+Текущая версия 31a18
 --------------------
 
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
@@ -123,6 +123,8 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 [+] Экономика: Новая  настройка  сервера  "Масштабировать  склады  от  скорости
     добычи". Настройка доступна в общих настройках сервера  в  разделе  "Прочие
     параметры". По умолчанию возможность отключена
+[+] Строительство/Здания: В ссылке на уничтожение здания указывается количество
+    требуемых ресурсов и время
 
 [~] ТМ: Изменения в ТМ текущего игрока отображаются сразу по факту
 [~] Луна: Имя создаваемой луны теперь не такое длинное
