misc-SYS: Revised technologies

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -144,6 +144,9 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     два исключения:
       1. Флот, летящий с луны, фалангой не виден
       2. Флот, летящий на задание "Удержание" фалангой не виден
+[~] Технологии:  Пересмотрены  технологии.  Устранены  противоречия  в  ветках
+    развития  (например,  ионный   двигатель   можно   было   исследовать   без
+    технологии). Технологии переупорядочены в более логичном порядке
 
 [%] Флоты: Добавлен патч для mysql-серверов со  включенным  STRICT_TRANS_TABLES
     при отправке флотов
