feat-FLT-31a19: New ship - Hypertransport. For TOP players and/or high-speed Universes

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,7 +12,7 @@
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
 
-Текущая версия 31a18
+Текущая версия 31a19
 --------------------
 
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
@@ -107,6 +107,8 @@ Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
     уровни - ТМ. Таблица необходимого опыта  для  набора  уровней  эквивалентна
     таблице опыта  за  постройки  (см.  /docs/readme.txt).  За  каждый  уровень
     начисляется 1000 ТМ
+[!] Флот: Новый корабль - Гипертранспорт. Предназначен для  ТОП  игроков  и/или
+    скоростных Вселенных
 
 [+] Обзор  планеты/Обзор  Империи:  Таймер  очереди  строительства  зданий  под
     иконкой планеты теперь переключается на  следующее  здание  в  очереди  при
