misc-SYS: Relase 31 Release Candidate

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,11 +9,11 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
-===============================================================================
+Project "SuperNova.WS" Release 31 RC "Artifact governors edit localized inflation"
+==================================================================================
 
-Текущая версия 31a19
---------------------
+Текущая версия 31c0
+-------------------
 
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
     свойствами. Артефакты можно купить за ТМ. Артефакты являются одноразовыми -
