--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,11 +9,11 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Project "SuperNova.WS" Release 31 RC4 "Artifact governors edit localized inflation"
-===================================================================================
-
-Текущая версия 31c4
+Текущая версия 31d0
 -------------------
+
+Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
+===============================================================================
 
 [!] Скины: Новый скин "supernova-ivash". Автор - Ivash
 [!] Артефакты: Добавлена подсистема Артефактов - редких объектов с  уникальными
