--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,8 +9,15 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 31d0
+Текущая версия 32a1
 -------------------
+
+[~] Скины: СН/Иваш - заменен бэкграунд в ячейках заголовка таблицы
+[~] Постройки:  Показываются  все  возможные  строения  на  планете/луне.  Если
+    невозможно осуществить постройку - показывается причина
+    Иконки  информации  и   своза   ресурсов   поменялись   местами,   что   бы
+    соответствовать  расположению  иконки  своза  ресурсов  на  списке   планет
+    (Обзор/Империя)
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
