fix-UNI-32a2: Fixed launching negative units through Universe AJAX interface

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a1
+Текущая версия 32a2
 -------------------
 
 [~] Скины: СН/Иваш - заменен бэкграунд в ячейках заголовка таблицы
@@ -18,6 +18,10 @@
     Иконки  информации  и   своза   ресурсов   поменялись   местами,   что   бы
     соответствовать  расположению  иконки  своза  ресурсов  на  списке   планет
     (Обзор/Империя)
+
+[%] Вселенная: Исправлена ошибка с запуском  отрицательного  количества  юнитов
+    через AJAX
+
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
 ===============================================================================
