fix-ALI-32a3: Fixed no tag error for users in newly created Alliances

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a2
+Текущая версия 32a3
 -------------------
 
 [~] Скины: СН/Иваш - заменен бэкграунд в ячейках заголовка таблицы
@@ -21,6 +21,8 @@
 
 [%] Вселенная: Исправлена ошибка с запуском  отрицательного  количества  юнитов
     через AJAX
+[%] Альянсы: Исправлена ошибка с неотображением тэга  у  членов  новосозданного
+    Альянса
 
 
 Project "SuperNova.WS" Release 31 "Artifact governors edit localized inflation"
