misc-SKIN-32a4: SN/Ivash skin updated

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,10 +9,10 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a3
+Текущая версия 32a4
 -------------------
 
-[~] Скины: СН/Иваш - заменен бэкграунд в ячейках заголовка таблицы
+[~] Скины: Обновлен скин СН/Иваш
 [~] Постройки:  Показываются  все  возможные  строения  на  планете/луне.  Если
     невозможно осуществить постройку - показывается причина
     Иконки  информации  и   своза   ресурсов   поменялись   местами,   что   бы
