misc-FLT-32a5: Theoretical fleet capacity increased to BIGINT(20) by every resource

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,7 +9,7 @@
  [@] Эта информация будет интересна только админам и/или разработчикам
  [*] ToDo - см. changelog.todo
 
-Текущая версия 32a4
+Текущая версия 32a5
 -------------------
 
 [~] Скины: Обновлен скин СН/Иваш
@@ -18,6 +18,8 @@
     Иконки  информации  и   своза   ресурсов   поменялись   местами,   что   бы
     соответствовать  расположению  иконки  своза  ресурсов  на  списке   планет
     (Обзор/Империя)
+[~] Флоты: Теоретическая емкость флота увеличена до BIGINT(20) по каждому  типу
+    ресурсов
 
 [%] Вселенная: Исправлена ошибка с запуском  отрицательного  количества  юнитов
     через AJAX
